--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,7 @@
 <h1>Home Page!</h1>
 
 <a href="/about">Go to the about page!</a>
+<br>
+<br>
+<img src="https://images.unsplash.com/photo-1439798060585-62ab242d7724?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=ea08850eb755cd3975c0ae9e8880de37">
+
